plugins {
	id 'idea'
	id 'java'

	id 'org.springframework.boot'

	id 'com.diffplug.spotless'
	id 'com.github.ben-manes.versions' version '0.40.0'
	id 'com.github.spotbugs' version '5.0.3'
	id 'com.google.cloud.tools.jib'
	id 'io.freefair.lombok'
}

compileJava { options.release = 11 }

repositories {
	mavenCentral()
	maven { url 'https://broadinstitute.jfrog.io/artifactory/libs-snapshot' }
	maven { url 'https://broadinstitute.jfrog.io/artifactory/libs-release' }
}


description = 'Azure Relay Listener'

apply from: 'publishing.gradle'
apply from: 'spring.gradle'
apply from: 'tooling.gradle'
apply from: 'analysis.gradle'

dependencies {
	annotationProcessor 'org.immutables:value:2.8.8'
	implementation('bio.terra:terra-common-lib:0.0.53-SNAPSHOT') {
		// remove transitive database deps
		exclude group: 'org.liquibase', module: 'liquibase-core'
		exclude group: 'bio.terra', module: 'stairway-gcp'
		exclude group: 'bio.terra', module: 'stairway'
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jdbc'
	}
	implementation 'org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-fa74f75'
	implementation 'com.microsoft.azure:azure-relay:0.0.4'
	implementation 'org.apache.commons:commons-lang3:3.0'
	implementation 'io.projectreactor:reactor-core:3.4.14'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
	testImplementation 'org.hamcrest:hamcrest:2.2'
}
